# insurance_aide_engineering_project

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile.airflow  main.py  pyproject.toml  test.txt
dags/: insurance_batch_pipeline.py
flink/: insurance_stream_features.sql  run_flink_stream_job.sh
jobs/: gold_clickhouse.py  insurance_data_generator.py  publish_datahub_lineage.py  publish_silver_delta.py  publish_streaming_lineage.py  quality_checks_clickhouse.py  silver_cleaning_delta.py  silver_quality_checks.py  stream_features_to_clickhouse.py  stream_json_to_kafka.py  verify_kafka_topic.py
